--- a/UniVerse/app/src/main/res/values/colors.xml
+++ b/UniVerse/app/src/main/res/values/colors.xml
@@ -7,4 +7,17 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Background -->
+    <color name="colorBackground">#E5E5E5</color>
+
+    <!-- Primary Color -->
+    <color name="colorPrimary">#0D88F2</color>
+    <color name="colorPrimaryVariant">#046DC8</color>
+    <color name="colorOnPrimary">#FAFAF9</color>
+
+    <!-- Secondary brand color. -->
+    <color name="colorSecondary">#3FB1B5</color>
+    <color name="colorSecondaryVariant">#258588</color>
+    <color name="colorOnSecondary">@color/black</color>
 </resources>
