--- a/UniVerse/app/src/main/res/layout/activity_place_holder_feed.xml
+++ b/UniVerse/app/src/main/res/layout/activity_place_holder_feed.xml
@@ -4,6 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PlaceHolderFeed">
+    tools:context=".Interests_Selection">
+
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/InterestChips"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+    </com.google.android.material.chip.ChipGroup>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
