--- a/UniVerse/app/src/main/res/drawable/profile_pic_circle.xml
+++ b/UniVerse/app/src/main/res/drawable/profile_pic_circle.xml
@@ -4,19 +4,13 @@
     >
     <item>
         <shape android:shape="oval">
-            <solid
-                android:color="@color/colorPrimary"/>
-
+            <solid android:color="@color/colorPrimary"/>
             <size
                 android:width="120dp"
                 android:height="120dp"/>
         </shape>
     </item>
 
-    <item
-        android:drawable="@drawable/ic_baseline_person_24"
-        android:color="@color/colorOnPrimary">
-
-    </item>
+    <item android:drawable="@drawable/ic_baseline_person_24" />
 
 </layer-list>
