--- a/UniVerse/app/src/main/res/layout/activity_register_student_info.xml
+++ b/UniVerse/app/src/main/res/layout/activity_register_student_info.xml
@@ -22,18 +22,22 @@
 
         />
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/profilePicBackground"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginVertical="40dp"
-        android:background="@android:color/transparent"
+        android:src="@drawable/profile_pic_circle"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        app:shapeAppearanceOverlay="@style/circleImageView"
         app:layout_constraintTop_toBottomOf="@id/studentRegistration_banner"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/profile_pic_circle" />
+        app:layout_constraintRight_toRightOf="parent" />
 
-    <ImageView
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/selectProfilePic"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
@@ -41,9 +45,7 @@
         app:layout_constraintBottom_toBottomOf="@id/profilePicBackground"
         app:layout_constraintRight_toRightOf="@id/profilePicBackground"
         app:srcCompat="@drawable/camera_plus_circle"
-        >
-
-    </ImageView>
+        />
 
     <TextView
         android:id="@+id/studentRegistrationMajorLabel"
