--- a/UniVerse/app/src/main/res/values/themes.xml
+++ b/UniVerse/app/src/main/res/values/themes.xml
@@ -20,4 +20,9 @@
 
 
     </style>
+
+    <style name="circleImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
