--- a/UniVerse/app/src/main/res/values/themes.xml
+++ b/UniVerse/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.UniVerse" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.UniVerse" parent="Theme.MaterialComponents.Light.NoActionBar">
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -16,7 +16,6 @@
 
         <!-- Customize your theme here. -->
         <item name="android:background">@color/colorBackground</item>
-
 
     </style>
 
