--- a/Event/app/src/main/res/layout/activity_main.xml
+++ b/Event/app/src/main/res/layout/activity_main.xml
@@ -1,172 +1,295 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/big_header"
-        android:layout_marginTop="20sp"
-        android:layout_marginStart="20sp"
-        android:text="✨ CREATE NEW EVENT ✨"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:textColor="#38b6ff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="HardcodedText" />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/event_name"
-        android:layout_below="@+id/big_header"
-        android:layout_marginTop="10sp"
-        android:layout_marginLeft="20sp"
-        android:text="Event Name"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/big_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20sp"
+            android:layout_marginTop="20sp"
+            android:text="✨ CREATE NEW EVENT ✨"
+            android:textColor="@android:color/holo_blue_light"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/location"
-        android:layout_below="@+id/event_name"
-        android:layout_marginTop="60sp"
-        android:layout_marginLeft="20sp"
-        android:text="Location"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <!--    Event Name-->
+        <TextView
+            android:id="@+id/event_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/big_header"
+            android:layout_marginLeft="20sp"
+            android:layout_marginTop="10sp"
+            android:text="Event Name"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/is_public"
-        android:layout_below="@+id/location"
-        android:layout_marginTop="60sp"
-        android:layout_marginLeft="20sp"
-        android:text="Public"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/event_name"
+            android:layout_marginLeft="20sp"
+            android:hint="Enter event name"
+            android:minLines="1"
+            android:maxLines="1" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/date_time"
-        android:layout_below="@+id/is_public"
-        android:layout_marginTop="10sp"
-        android:layout_marginLeft="20sp"
-        android:text="Date and Time"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <!--Location-->
+        <TextView
+            android:id="@+id/location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/event_name"
+            android:layout_marginLeft="20sp"
+            android:layout_marginTop="50sp"
+            android:text="Location"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/description"
-        android:layout_below="@+id/date_time"
-        android:layout_marginTop="60sp"
-        android:layout_marginLeft="20sp"
-        android:text="Description"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/location"
+            android:layout_marginLeft="20sp"
+            android:hint="Enter event location"
+            android:minLines="1"
+            android:maxLines="1"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/organizer"
-        android:layout_below="@+id/description"
-        android:layout_marginTop="60sp"
-        android:layout_marginLeft="20sp"
-        android:text="Organizer Name"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <!--    Is this event public?-->
+        <TextView
+            android:id="@+id/is_public"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/location"
+            android:layout_marginLeft="20sp"
+            android:layout_marginTop="50sp"
+            android:text="Public"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/num_student"
-        android:layout_below="@+id/organizer"
-        android:layout_marginTop="60sp"
-        android:layout_marginLeft="20sp"
-        android:text="How many students can join the event?"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/location"
+            android:layout_marginTop="50sp"
+            android:layout_toRightOf="@+id/is_public" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/event_photo"
-        android:layout_below="@+id/num_student"
-        android:layout_marginTop="60sp"
-        android:layout_marginLeft="20sp"
-        android:text="Event Photo"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <!--Date and Time-->
+        <TextView
+            android:id="@+id/date_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/is_public"
+            android:layout_marginLeft="20sp"
+            android:layout_marginTop="10sp"
+            android:text="Date and Time"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/cancel_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cancel"
-        android:layout_below="@+id/event_photo"
-        android:layout_marginHorizontal="80sp"
-        android:layout_marginTop="10sp"
-        android:backgroundTint="@android:color/holo_blue_light"
-        tools:layout_editor_absoluteX="158sp"
-        tools:layout_editor_absoluteY="528sp" />
+        <Button
+            android:id="@+id/datePickerButton"
+            android:layout_width="160sp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/date_time"
+            android:layout_marginLeft="20sp"
+            android:onClick="openDatePicker"
+            android:text="mm-dd-yyyy"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            style="?android:spinnerStyle"/>
 
-    <Button
-        android:id="@+id/save_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/event_photo"
-        android:layout_marginHorizontal="250sp"
-        android:layout_marginTop="10sp"
-        android:text="Save"
-        android:backgroundTint="@android:color/holo_blue_light"
-        tools:layout_editor_absoluteX="158sp"
-        tools:layout_editor_absoluteY="528sp" />
+        <Button
+            android:id="@+id/hourPickerButton"
+            android:layout_width="130sp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/date_time"
+            android:layout_marginLeft="20sp"
+            android:layout_toRightOf="@+id/date_time"
+            android:onClick="openTimePicker"
+            android:text="hour-min"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            style="?android:spinnerStyle"/>
 
+        <!--    Organizer name-->
+        <TextView
+            android:id="@+id/organizer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/date_time"
+            android:layout_marginLeft="20sp"
+            android:layout_marginTop="50sp"
+            android:text="Organizer Name"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/organizer"
+            android:layout_marginLeft="20sp"
+            android:hint="Enter organizer name"
+            android:minLines="1"
+            android:maxLines="1"/>
 
-</RelativeLayout>
+        <!--   Summary-->
+        <TextView
+            android:id="@+id/summary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/organizer"
+            android:layout_marginLeft="20sp"
+            android:layout_marginTop="50sp"
+            android:text="Summary"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/summary"
+            android:layout_marginLeft="20sp"
+            android:hint="Enter a short description"
+            android:maxLines="1"
+            android:minLines="1" />
+
+        <!--    Description-->
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/summary"
+            android:layout_marginLeft="20sp"
+            android:layout_marginTop="50sp"
+            android:text="Description"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/description"
+            android:layout_marginLeft="20sp"
+            android:hint="Enter a detailed description"
+            android:maxLines="5"
+            android:minLines="5" />
+
+        <!--    Number of student can join the event-->
+        <TextView
+            android:id="@+id/num_student"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/description"
+            android:layout_marginLeft="20sp"
+            android:layout_marginTop="130sp"
+            android:text="How many students can join the event?"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/num_student"
+            android:layout_marginLeft="20sp"
+            android:hint="Enter the quantity"
+            android:minLines="1"
+            android:maxLines="1"/>
+
+        <!--Button to open the image selector-->
+        <Button
+            android:id="@+id/eventPhotoPickerButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/num_student"
+            android:layout_marginLeft="20sp"
+            android:layout_marginTop="45sp"
+            android:backgroundTint="@android:color/white"
+            android:text="Event Photo"
+            android:textColor="@android:color/holo_blue_light"
+            android:textSize="18sp"
+            android:onClick="openEventPhotoPicker"/>
+
+        <!--ImageView to preview the selected image-->
+        <ImageView
+            android:id="@+id/IVPreviewImage"
+            android:layout_width="200sp"
+            android:layout_height="200sp"
+            android:layout_below="@id/eventPhotoPickerButton"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="90sp"
+            android:layout_marginEnd="16dp" />
+
+        <!--    Cancel Button-->
+        <Button
+            android:id="@+id/cancel_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/eventPhotoPickerButton"
+            android:layout_marginHorizontal="80sp"
+            android:layout_marginTop="20sp"
+            android:backgroundTint="@android:color/holo_blue_light"
+            android:text="Cancel"
+            tools:layout_editor_absoluteX="158sp"
+            tools:layout_editor_absoluteY="528sp" />
+
+        <!--    Save Button-->
+        <Button
+            android:id="@+id/save_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/eventPhotoPickerButton"
+            android:layout_marginHorizontal="250sp"
+            android:layout_marginTop="20sp"
+            android:backgroundTint="@android:color/holo_blue_light"
+            android:text="Save"
+            tools:layout_editor_absoluteX="158sp"
+            tools:layout_editor_absoluteY="528sp" />
+
+    </RelativeLayout>
+    </ScrollView>
