--- a/UniVerse/app/src/main/res/layout/activity_feed.xml
+++ b/UniVerse/app/src/main/res/layout/activity_feed.xml
@@ -20,7 +20,7 @@
         app:navGraph="@navigation/nav_graph" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id = "@+id/bottom_navigation"
+        android:id = "@+id/bottomNavigationView"
         style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
         android:layout_width="match_parent"
         android:layout_height="75dp"
