--- a/UniVerse/app/src/main/res/layout/activity_feed.xml
+++ b/UniVerse/app/src/main/res/layout/activity_feed.xml
@@ -25,5 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="75dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/bottom_navigation_menu" />
+        app:menu="@menu/bottom_navigation_menu"
+        android:background="@color/colorPrimary"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
