Fixes to menu system

--- a/UniVerse/app/src/main/res/values/themes.xml
+++ b/UniVerse/app/src/main/res/values/themes.xml
@@ -15,7 +15,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
         <!-- Customize your theme here. -->
-        <item name="android:background">@color/colorBackground</item>
+        <!--<item name="android:background">@color/colorBackground</item>-->
 
     </style>
 
@@ -24,8 +24,4 @@
         <item name="cornerSize">50%</item>
     </style>
 
-    <style name="circleImageView" parent="">
-        <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">50%</item>
-    </style>
 </resources>
