--- a/UniVerse/app/src/main/res/values/themes.xml
+++ b/UniVerse/app/src/main/res/values/themes.xml
@@ -19,4 +19,14 @@
 
 
     </style>
+
+    <style name="circleImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
+    <style name="eventImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">4%</item>
+    </style>
 </resources>
