--- a/UniVerse/app/src/main/res/values/themes.xml
+++ b/UniVerse/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.UniVerse" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.UniVerse" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -15,7 +16,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
         <!-- Customize your theme here. -->
-        <!--<item name="android:background">@color/colorBackground</item>-->
+        <item name="android:background">@color/colorBackground</item>
+
 
     </style>
 
@@ -24,4 +26,8 @@
         <item name="cornerSize">50%</item>
     </style>
 
+    <style name="eventImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">4%</item>
+    </style>
 </resources>
