--- a/UniVerse/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/UniVerse/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -14,7 +14,7 @@
         android:icon="@drawable/ic_baseline_notifications_24"/>
 
     <item
-        android:id="@+id/thirdFragment"
+        android:id="@+id/scheduleFragment"
         android:enabled="true"
         android:title="@string/schedule"
         android:icon="@drawable/ic_baseline_calendar_today_24" />
