--- a/UniVerse/app/src/main/res/layout/activity_login_user.xml
+++ b/UniVerse/app/src/main/res/layout/activity_login_user.xml
@@ -6,81 +6,90 @@
     android:layout_height="match_parent"
     tools:context=".LoginUser">
 
-    <TextView
+
+    <ImageView
         android:id="@+id/banner"
-        android:layout_width="match_parent"
+        android:src="@drawable/ic_universelogo"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="60sp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textColor="@color/black"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="50dp"
-        />
+        app:tint="@color/colorPrimary" />
 
-    <TextView
-        android:id="@+id/bannerSubtitle"
+    <ImageView
+        android:id="@+id/splashArt"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Welcome to the UniVerse!"
-        android:textSize="12sp"
-        android:textAlignment="center"
-        android:textStyle=""
-        android:textColor="@color/black"
+        android:layout_height="300dp"
+        android:src="@drawable/ic_splash_art"
         app:layout_constraintTop_toBottomOf="@id/banner"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
         />
 
     <TextView
         android:id="@+id/loginMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
         android:layout_marginHorizontal="60dp"
         android:text="Let's get you logged in!"
-        android:textSize="40sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/bannerSubtitle"
+        android:fontFamily="@font/gilroy_bold"
+        app:layout_constraintTop_toBottomOf="@id/splashArt"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
 
         />
 
+    <ImageView
+        android:id="@+id/ic_at"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_hericon_at"
+        app:layout_constraintRight_toLeftOf="@id/loginEmail"
+        app:layout_constraintTop_toTopOf="@id/loginEmail"
+        app:layout_constraintBottom_toBottomOf="@id/loginEmail"
+        android:layout_marginLeft="60dp"/>
+
     <EditText
         android:id="@+id/loginEmail"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="60dp"
         android:layout_marginTop="40dp"
         android:hint="Email"
-        android:ems="10"
+        android:ems="13"
         android:inputType="textEmailAddress"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/loginMessage"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <EditText
         android:id="@+id/loginPassword"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_marginHorizontal="60dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="Password"
-        android:ems="10"
+        android:ems="13"
         android:inputType="textPassword"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/loginEmail"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         />
+
+    <ImageView
+        android:id="@+id/ic_lock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_hericon_lock"
+        app:layout_constraintRight_toLeftOf="@id/loginPassword"
+        app:layout_constraintTop_toTopOf="@id/loginPassword"
+        app:layout_constraintBottom_toBottomOf="@id/loginPassword"
+        android:layout_marginLeft="60dp"/>
 
     <Button
         android:id="@+id/loginButton"
@@ -88,7 +97,9 @@
         android:layout_height="70dp"
         android:layout_marginHorizontal="60dp"
         android:layout_marginTop="40dp"
-        android:text="Login"
+        android:text="LOGIN"
+        android:textSize="16dp"
+        android:fontFamily="@font/gilroy_bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/loginPassword"
@@ -103,6 +114,7 @@
         android:text="Forgot Password?"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
+        android:fontFamily="@font/gilroy_bold"
         app:layout_constraintTop_toBottomOf="@id/loginButton"
         app:layout_constraintLeft_toLeftOf="@id/loginButton"
         />
@@ -116,6 +128,7 @@
         android:textColor="@color/colorPrimary"
         android:textSize="14dp"
         android:textStyle="bold"
+        android:fontFamily="@font/gilroy_bold"
         app:layout_constraintTop_toTopOf="@id/forgotPassword"
         app:layout_constraintRight_toRightOf="@id/loginButton"
         />
