--- a/UniVerse/app/src/main/res/layout/activity_register_student_info.xml
+++ b/UniVerse/app/src/main/res/layout/activity_register_student_info.xml
@@ -6,17 +6,45 @@
     android:layout_height="match_parent"
     tools:context=".RegisterStudentInfo">
 
+    <ImageView
+        android:id="@+id/banner"
+        android:src="@drawable/ic_universelogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:tint="@color/colorPrimary" />
+
     <TextView
-        android:id="@+id/studentRegistration_banner"
+        android:id="@+id/infoMessge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
         android:layout_marginHorizontal="60dp"
-        android:text="Tell us a little about yourself..."
+        android:layout_marginTop="30dp"
+        android:text="Almost done!"
         android:textSize="30sp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/gilroy_bold"
+        app:layout_constraintTop_toBottomOf="@id/banner"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        />
+
+    <TextView
+        android:id="@+id/infoSubtitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="60dp"
+        android:layout_marginTop="30dp"
+        android:text="Set a profile pic and tell us about your studies."
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:fontFamily="@font/publicsans_regular"
+        app:layout_constraintTop_toBottomOf="@id/infoMessge"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
 
@@ -31,7 +59,7 @@
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
         app:shapeAppearanceOverlay="@style/circleImageView"
-        app:layout_constraintTop_toBottomOf="@id/studentRegistration_banner"
+        app:layout_constraintTop_toBottomOf="@id/infoSubtitle"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -55,6 +83,7 @@
         android:background="@android:color/transparent"
         android:layout_marginBottom="5dp"
         android:text="Field of Study"
+        android:fontFamily="@font/gilroy_bold"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/profilePicBackground"
@@ -69,6 +98,7 @@
         android:layout_marginTop="10dp"
         android:ems="10"
         android:textSize="18sp"
+        android:fontFamily="@font/publicsans_regular"
         app:layout_constraintTop_toBottomOf="@id/studentRegistrationMajorLabel"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -82,6 +112,7 @@
         android:background="@android:color/transparent"
         android:layout_marginBottom="5dp"
         android:text="Graduation Year"
+        android:fontFamily="@font/gilroy_bold"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/studentRegistrationMajor"
@@ -93,6 +124,7 @@
         android:layout_width="240dp"
         android:layout_height="160dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/publicsans_regular"
         app:layout_constraintTop_toBottomOf="@id/studentRegistrationGradLabel"
         app:layout_constraintBottom_toTopOf="@id/studentRegistrationNextButton"
         app:layout_constraintRight_toRightOf="parent"
@@ -106,7 +138,9 @@
         android:layout_height="70dp"
         android:layout_marginHorizontal="60dp"
         android:layout_marginBottom="30dp"
-        android:text="Next"
+        android:text="NEXT"
+        android:fontFamily="@font/gilroy_bold"
+        android:textSize="16sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
