--- a/UniVerse/app/src/main/res/layout/activity_register_user.xml
+++ b/UniVerse/app/src/main/res/layout/activity_register_user.xml
@@ -6,90 +6,132 @@
     android:layout_height="match_parent"
     tools:context=".RegisterUser">
 
-    <TextView
+
+    <ImageView
         android:id="@+id/banner"
-        android:layout_width="match_parent"
+        android:src="@drawable/ic_universelogo"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="60sp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textColor="@color/black"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="50dp"
-        />
+        app:tint="@color/colorPrimary" />
 
     <TextView
-        android:id="@+id/bannerSubtitle"
-        android:layout_width="wrap_content"
+        android:id="@+id/loginMessage"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Welcome to the UniVerse!"
-        android:textSize="12sp"
-        android:textAlignment="center"
-        android:textStyle=""
+        android:layout_marginHorizontal="60dp"
+        android:layout_marginTop="30dp"
+        android:text="Welcome to UniVerse!"
+        android:textSize="40sp"
+        android:textStyle="bold"
         android:textColor="@color/black"
+        android:fontFamily="@font/gilroy_bold"
         app:layout_constraintTop_toBottomOf="@id/banner"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
         />
 
-    <EditText
-        android:id="@+id/registerFirstName"
-        android:layout_width="240dp"
+    <TextView
+        android:id="@+id/loginSubtitle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:hint="First name"
-        android:ems="10"
-        android:inputType="text"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/bannerSubtitle"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginHorizontal="60dp"
+        android:layout_marginVertical="40dp"
+        android:fontFamily="@font/publicsans_regular"
+        android:text="Let's get you signed up!"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginMessage" />
 
-    <EditText
-        android:id="@+id/registerLastName"
-        android:layout_width="240dp"
+    <ImageView
+        android:id="@+id/ic_at"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="Last name"
-        android:ems="10"
-        android:inputType="text"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/registerFirstName"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+        android:src="@drawable/ic_hericon_at"
+        app:layout_constraintRight_toLeftOf="@id/registerEmail"
+        app:layout_constraintTop_toTopOf="@id/registerEmail"
+        app:layout_constraintBottom_toBottomOf="@id/registerEmail"
+        android:layout_marginLeft="60dp"/>
 
     <EditText
         android:id="@+id/registerEmail"
-        android:layout_width="240dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="60dp"
         android:hint="Email"
-        android:ems="10"
+        android:ems="13"
         android:inputType="textEmailAddress"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/registerLastName"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/registerFirstName"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <EditText
         android:id="@+id/registerPassword"
-        android:layout_width="240dp"
+        android:layout_width="wrap_content"
+        android:layout_marginHorizontal="60dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="Password"
-        android:ems="10"
+        android:ems="13"
         android:inputType="textPassword"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/registerEmail"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        />
+
+    <ImageView
+        android:id="@+id/ic_lock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_hericon_lock"
+        app:layout_constraintRight_toLeftOf="@id/registerPassword"
+        app:layout_constraintTop_toTopOf="@id/registerPassword"
+        app:layout_constraintBottom_toBottomOf="@id/registerPassword"
+        android:layout_marginLeft="60dp"/>
+
+
+    <ImageView
+        android:id="@+id/ic_user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_hericon_user"
+        app:layout_constraintRight_toLeftOf="@id/registerFirstName"
+        app:layout_constraintTop_toTopOf="@id/registerFirstName"
+        app:layout_constraintBottom_toBottomOf="@id/registerFirstName"
+        android:layout_marginLeft="60dp"/>
+
+    <EditText
+        android:id="@+id/registerFirstName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:ems="6"
+        android:hint="First name"
+        android:inputType="text"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@id/registerButton"
+        app:layout_constraintEnd_toStartOf="@+id/registerLastName"
+        app:layout_constraintRight_toLefttOf="@id/registerLastName"
+        app:layout_constraintTop_toBottomOf="@id/loginSubtitle"
+        app:layout_constraintVertical_bias="0.32" />
+
+    <EditText
+        android:id="@+id/registerLastName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="60dp"
+        android:hint="Last name"
+        android:ems="6"
+        android:inputType="text"
+        android:textSize="18sp"
+        app:layout_constraintTop_toTopOf="@id/registerFirstName"
+        app:layout_constraintBottom_toBottomOf="@id/registerFirstName"
+        app:layout_constraintRight_toRightOf="parent"
         />
 
     <Button
@@ -98,11 +140,13 @@
         android:layout_height="70dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="40dp"
-        android:text="Register"
+        android:text="CREATE ACCOUNT"
+        android:textSize="16dp"
+        android:fontFamily="@font/gilroy_bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/registerPassword"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="60dp"
         />
 
     <ProgressBar
