--- a/UniVerse/app/src/main/res/layout/event_card.xml
+++ b/UniVerse/app/src/main/res/layout/event_card.xml
@@ -10,34 +10,98 @@
     android:layout_margin="10dp"
     android:elevation="90dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:orientation="vertical"
-        android:background="#000000">
+        android:background="#FAFAF9">
 
         <ImageView
             android:id="@+id/eventImage"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:scaleType="centerCrop"/>
+            android:layout_height="125dp"
+            android:scaleType="centerCrop"
+            android:background="@color/shimmerBG"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/eventTitle"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/gilroy_bold"
             android:text="Event Title"
-            android:textColor="#ffff"
-            android:textSize="25dp"
-            android:textStyle="italic|bold" />
+            android:textColor="@color/black"
+            android:layout_marginLeft="20dp"
 
+            android:textSize="20dp"
+            app:layout_constraintTop_toTopOf="@id/dateSquare"
+            app:layout_constraintLeft_toRightOf="@id/dateSquare"
+            />
+
+        <com.google.android.material.imageview.ShapeableImageView
+            app:shapeAppearance="@style/eventDateSquare"
+            android:id="@+id/dateSquare"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="16dp"
+            android:background="@color/colorPrimaryLight"
+            app:layout_constraintTop_toBottomOf="@id/eventImage"
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
         <TextView
-            android:id="@+id/eventDesc"
-            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_width="60dp"
+            android:fontFamily="@font/gilroy_bold"
+            android:text="APR"
+            android:textColor="@color/white"
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="@id/dateSquare"
+            app:layout_constraintLeft_toLeftOf="@id/dateSquare"
+            app:layout_constraintRight_toRightOf="@id/dateSquare"
+            android:background="@color/colorPrimary"/>
+
+        <ImageView
+            android:id="@+id/mapPin"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="This is an example description"
-            android:textColor="#ffff" />
-    </LinearLayout>
+            android:src="@drawable/ic_baseline_location_on_24"
+            app:layout_constraintTop_toBottomOf="@id/eventTitle"
+            app:layout_constraintLeft_toLeftOf="@id/eventTitle"
+            app:tint="@color/colorPrimaryLight" />
+
+        <TextView
+            android:id="@+id/eventLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Event Location"
+            android:layout_marginLeft="6dp"
+            android:fontFamily="@font/publicsans_regular"
+            app:layout_constraintTop_toTopOf="@+id/mapPin"
+            app:layout_constraintBottom_toBottomOf="@id/mapPin"
+            app:layout_constraintLeft_toRightOf="@+id/mapPin"/>
+
+        <TextView
+            android:id="@+id/eventTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-  3:00p-4:00p"
+            android:layout_marginLeft="6dp"
+            android:fontFamily="@font/publicsans_regular"
+            app:layout_constraintTop_toTopOf="@+id/mapPin"
+            app:layout_constraintBottom_toBottomOf="@id/mapPin"
+            app:layout_constraintLeft_toRightOf="@+id/eventLocation"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:textColor="@color/white"
+            android:text="INFO"
+            android:fontFamily="@font/gilroy_bold"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
