--- a/UniVerse/app/src/main/res/layout/fragment_schedule.xml
+++ b/UniVerse/app/src/main/res/layout/fragment_schedule.xml
@@ -17,6 +17,7 @@
         android:textSize="40sp"
         android:textStyle="bold"
         android:textColor="@color/black"
+        android:fontFamily="@font/gilroy_bold"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <EditText
@@ -35,6 +36,7 @@
         android:clickable="false"
         android:focusableInTouchMode="false"
         android:cursorVisible="false"
+        android:fontFamily="@font/publicsans_regular"
         />
     <ImageView
         android:id="@+id/leftButton"
@@ -79,6 +81,7 @@
         android:text="No events yet..."
         android:textStyle="bold"
         android:gravity="center"
+        android:fontFamily="@font/gilroy_semibold"
         app:layout_constraintTop_toBottomOf="@id/todaysDate"/>
 
 
