--- a/UniVerse/app/src/main/res/layout/schedule_list_items.xml
+++ b/UniVerse/app/src/main/res/layout/schedule_list_items.xml
@@ -13,6 +13,7 @@
         android:layout_width="100dp"
         android:layout_height="80dp"
         android:text="2:00pm"
+        android:fontFamily="@font/gilroy_semibold"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:gravity="center"/>
@@ -21,6 +22,7 @@
         app:layout_constraintTop_toTopOf="@id/eventTime"
         app:layout_constraintLeft_toRightOf="@id/eventTime"
         android:id="@+id/eventName"
+        android:fontFamily="@font/gilroy_bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
@@ -37,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Event Location"
+        android:fontFamily="@font/publicsans_regular"
         android:textSize="16sp" />
 
     <ImageView
