--- a/UniVerse/app/src/main/res/values/themes.xml
+++ b/UniVerse/app/src/main/res/values/themes.xml
@@ -29,4 +29,9 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">4%</item>
     </style>
+
+    <style name="eventDateSquare" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">25%</item>
+    </style>
 </resources>
