Final settings product

--- a/UniVerse/app/src/main/res/xml/root_preferences.xml
+++ b/UniVerse/app/src/main/res/xml/root_preferences.xml
@@ -9,6 +9,10 @@
             app:title="Edit Profile Information" />
 
         <ListPreference
+            app:key="updateInt"
+            app:title="Update Intersts"/>
+
+        <EditTextPreference
             app:key="updatePass"
             app:title="Change password"/>
 
